--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇫🇷 法国-443.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-334.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-503.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-459.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.10MB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-937.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-405.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-1.13MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-309.4KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-616.5KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇻🇳 越南-8.37MB/s(Youtube:不良林), server: 103.166.140.104, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.104}}
+  - {name: 🇯🇵 日本-1.93MB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-548.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-343.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-10.16MB/s(Youtube:不良林), server: 103.166.143.196, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.143.196}}
+  - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
+  - {name: 未知国家-5.02MB/s(Youtube:不良林), server: 103.182.17.179, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.182.17.179}}
+  - {name: 🇸🇬 新加坡-1.41MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-349.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇫🇷 法国-443.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-405.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-616.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-548.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-343.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-10.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-5.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇫🇷 法国-443.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-405.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-616.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-548.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-343.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-10.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-5.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇫🇷 法国-443.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-405.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-616.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-548.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-343.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-10.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-5.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇫🇷 法国-443.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-405.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-616.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-548.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-343.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-10.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-5.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇫🇷 法国-443.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-405.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-616.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-548.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-343.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-10.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-5.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇫🇷 法国-443.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-405.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-616.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-548.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-343.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-10.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-5.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇫🇷 法国-443.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-405.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-616.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-548.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-343.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-10.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-5.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
