--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-427.1KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 未知国家-5.12MB/s(Youtube:不良林), server: 103.186.148.106, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.186.148.106}}
-  - {name: 🇨🇳 中国-349.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-565.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-498.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-450.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-2.15MB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.64MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-638.0KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: crj749919467.n-tmd.com, port: 31502, type: vmess, uuid: 9b4f0258-1127-41d9-f30a-469e80737327, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-455.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.47MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-487.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-812.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-318.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
