--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-565.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-498.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-450.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.15MB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-487.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-455.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.84MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-812.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-318.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-328.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-332.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-530.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-374.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-565.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-498.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-450.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-812.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
